"-DELETED: Cleand up some assets that weren't needed"

--- a/aud_vis@campjs/src/client/scss/main.scss
+++ b/aud_vis@campjs/src/client/scss/main.scss
@@ -12,18 +12,14 @@
 @import 'base/typography';
 
 // Layout
-@import 'layout/wrapper';
 @import 'layout/grid';
 @import 'layout/header';
-@import 'layout/navigation';
 @import 'layout/footer';
-@import 'layout/intro';
-@import 'layout/content';
 
 // Components
 @import 'components/spacer';
 @import 'components/debug';
 @import 'components/buttons';
 @import 'components/global-overlay';
-@import 'components/spacer';
-@import 'components/logo';
+
+// Pages
